get bootstrap and progress in civilization html

--- a/civilization.html
+++ b/civilization.html
@@ -1,12 +1,39 @@
-<!DOCTYPE html>
-<html lang="es">
+<html lang='es'>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset='UTF-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <link href='https://fonts.googleapis.com/css2?family=Poppins&display=swap' rel='stylesheet' sizes='64x64'>
+
+
+    <link rel='preconnect' href='https://fonts.gstatic.com'>
+    <link href='https://fonts.googleapis.com/css2?family=Poppins&display=swap' rel='stylesheet'>
+
+    <link rel='stylesheet' href='css/index.css'>
+    <link rel='stylesheet' href='bootstrap/css/bootstrap.min.css'>
+
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
+    <script src='bootstrap/js/bootstrap.min.js'></script>
+    <script src='js/civilization.js'></script>
     <title>Civilization</title>
 </head>
-<body>
-    
+
+<body class='dark-layout text-light'>
+    <div class='container'>
+        <div class='row justify-content-center'>
+            <div class='col-xs-12 col-md-10'>
+                <div class='p-3 my-3 text-light card rounded box-shadow'>
+                    <h4 id='title'>
+                        Civilization of Age Of Empires II
+                    </h4>
+                </div>
+                <div class="card p-3" id='civilizationSelected'>
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
